--- a/AutoCmdb/templates/asset/asset_add.html
+++ b/AutoCmdb/templates/asset/asset_add.html
@@ -62,6 +62,10 @@
 
             <div class="row" style="padding-left: 15px">
 
+                <input name="name" value="" style="display: none">
+
+
+
                 <div class="col-md-6 form-group has-feedback">
                     {{ forms_obj.category.label_tag }}
                     {{ forms_obj.category }}
@@ -70,8 +74,8 @@
                 </div>
 
                 <div class="col-md-6 form-group has-feedback">
-                    {{ forms_obj.sn.label_tag }}
-                    {{ forms_obj.sn }}
+                    {{ forms_obj.number.label_tag }}
+                    {{ forms_obj.number }}
                     <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
                 </div>
 
@@ -214,8 +218,9 @@
 
                 success: function (callback) {
                     //console.log(callback);
-                    $("input[name='sn']").removeAttr("disabled");
-                    $("input[name='sn']").val(callback.number);
+                    $("input[name='number']").removeAttr("disabled");
+                    $("input[name='number']").val(callback.number);
+                    $("input[name='name']").val(callback.name);
                 },
                 error: function () {
                 }
