--- a/AutoCmdb/templates/asset/base.html
+++ b/AutoCmdb/templates/asset/base.html
@@ -49,3 +49,108 @@
 
 
 {% endblock %}
+
+
+{% block base-js %}
+
+
+    <script>
+
+
+    // 日期
+    $('#id_purchase_date').datepicker(
+        {
+            language: 'zh-TW',
+            format: "yyyy-mm-dd",
+            todayHighlight: true,
+
+        });
+
+
+    // 選擇部門後請求關聯使用資料
+    function get_dent_user(e) {
+        //console.log(e);
+        //console.log($(this));
+        //console.log(e.value);
+
+        $.ajax({
+            url: "/api/dent_user",
+            type: "GET",
+            data: {'dent': e.value},
+            async: false,
+
+            success: function (callback) {
+                window.dent_user = {
+                    'status': 'ok',
+                    'data': callback
+                };
+                console.log(window.dent_user);
+            },
+            error: function () {
+
+            }
+        });
+    };
+
+
+    // 新增資產 關聯用戶
+    function add_assetform_user(e) {
+        get_dent_user(e);
+        dent_user = window.dent_user;
+        //console.log(dent_user);
+        if (dent_user.status == 'ok') {
+            // 解開#user_add select選項 disabled
+            $("#id_manager").removeAttr("disabled");
+
+            console.log('add_assetform_user');
+
+            $("#id_manager").find('option')
+                .remove()
+                .end()
+                .append('<option value="">--------</option>')
+                .val('')
+            ;
+
+            var users = dent_user.data.users;
+            var owner = dent_user.data.owner;
+
+
+            $.each(users, function (i, item) {
+                console.log(item);
+
+                $("#id_manager").append($('<option>', {
+                        value: item.id,
+                        text: item.name
+                    }
+                ));
+
+                if (owner) {
+                    $("#id_manager").val(owner)
+                }
+
+            })
+        }
+    };
+
+
+    // 檢查狀態
+    function ch_status_ele(e) {
+
+        if (e.value == "使用中") {
+            $("#id_department").removeAttr("disabled").val("");
+            $("#id_manager").removeAttr("disabled").val("");
+
+
+        } else {
+            $("#id_department").attr("disabled", "disabled").val("");
+            $("#id_manager").attr("disabled", "disabled").val("");
+
+        }
+
+    }
+
+</script>
+
+
+{% endblock %}
+
