--- a/AutoCmdb/templates/user/index.html
+++ b/AutoCmdb/templates/user/index.html
@@ -101,7 +101,7 @@
                 {% for user in user_obj %}
 
                     <tr>
-                        <td>{{ user.dent.block_number }}{{ user.code }}</td>
+                        <td>{{ user.code }}</td>
                         <td>{{ user.name }}</td>
                         <td>{{ user.user.username }}</td>
                         <td>{{ user.sex }}</td>
