--- a/AutoCmdb/templates/user/user_add.html
+++ b/AutoCmdb/templates/user/user_add.html
@@ -48,14 +48,8 @@
 
 
     <div class="panel panel-default" style="padding: 20px">
-        <form role="form" method="post" id="userform_add">
+        <form class="form" id="form">
             {% csrf_token %}
-
-
-            <!-- 錯誤提示-->
-            <div class="alert" style="display: none">
-                <strong></strong>
-            </div>
 
 
             <div class="form-group">
@@ -63,101 +57,130 @@
             </div>
 
 
-            <div class="col-md-6 form-group has-feedback">
-                <label for="">編號</label>
-                <input type="number" name="code" class="form-control" placeholder=""
-                       value="{{ forms_obj.dent.block_number }}{{ userinfo_obj.code }}">
+            <div class="col-md-6  form-group has-feedback">
+                {{ forms_userproinfo_obj.dent.label_tag }}
+                {{ forms_userproinfo_obj.dent }}
                 <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+            </div>
+
+            <div class="form-group col-md-6 has-feedback">
+
+                {{ forms_userproinfo_obj.code.label_tag }}
+                {{ forms_userproinfo_obj.code }}
+                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+            </div>
+
+            <div class="form-group col-md-6 has-feedback" style="display: none">
+                {{ forms_userproinfo_obj.number.label_tag }}
+                {{ forms_userproinfo_obj.number }}
+                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
             </div>
 
 
             <div class="col-md-6 form-group has-feedback">
-                <label class="col-form-label">用戶名</label>
-                {{ forms_obj.username }}
+                {{ forms_user_obj.username.label_tag }}
+                {{ forms_user_obj.username }}
                 <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+            </div>
+
+            <div class="col-md-6  form-group has-feedback">
+                {{ forms_userproinfo_obj.name.label_tag }}
+                {{ forms_userproinfo_obj.name }}
+                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
             </div>
 
             <div class="col-md-6 form-group has-feedback">
-                <label class="col-form-label">姓名</label>
-                {{ forms_obj.name }}
+                {{ forms_userproinfo_obj.sex.label_tag }}
+                {{ forms_userproinfo_obj.sex }}
                 <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
-            </div>
 
-            <div class="col-md-6 form-group has-feedback">
-                <label class="col-form-label">性別</label>
-                {{ forms_obj.sex }}
-                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
             </div>
 
 
-            <div class="col-md-6 form-group has-feedback">
-                <label class="col-form-label">部門</label>
-                {{ forms_obj.dent }}
+            <div class="col-md-6  form-group has-feedback">
+                {{ forms_userproinfo_obj.birthday.label_tag }}
+                {{ forms_userproinfo_obj.birthday }}
                 <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
             </div>
 
-            <div class="col-md-6 form-group has-feedback">
-                <label class="col-form-label">生日</label>
-                {{ forms_obj.birthday }}
+            <div class="col-md-12 form-group has-feedback" style="padding-left:15px ">
+                {{ forms_userproinfo_obj.in_service.label_tag }}
+                {{ forms_userproinfo_obj.in_service }}
                 <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
-            </div>
 
-            <div class="col-md-12 form-group has-feedback" style="padding-left:15px; padding-right: 15px; ">
-                <label> 在職狀態</label>
-                {{ forms_obj.in_service }}
-                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
             </div>
 
 
             <div class="form-group">
                 <label> 登入功能</label>
+                {% if forms_user_obj.instance.is_staff %}
+                    <button id="change_passwd" type="button" class="btn btn-success" style="margin-left: 20px">更改密碼
+                    </button>
+                {% endif %}
+            </div>
+
+            <div class="row" style="padding-left: 30px">
+
+                <div class="form-horizontal">
+
+                    <div class="form-group col-md-12 has-feedback">
+                        <label class="col-md-2 ">{{ forms_user_obj.is_staff.label }}</label>
+                        {{ forms_user_obj.is_staff }}
+                        <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+                    </div>
 
 
-                <button id="change_passwd" type="button" class="btn btn-success"
-                        style="margin-left: 20px;display: none">設定密碼
-                </button>
+                    <!-- Text input-->
+                    <div class="form-group col-md-12 has-feedback" style="display: none">
+                        <label class="col-md-2 ">{{ forms_user_obj.password1.label }}</label>
+                        {{ forms_user_obj.password1 }}
+                        <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+                    </div>
+
+
+                    <!-- Text input-->
+                    <div class="form-group col-md-12 has-feedback" style="display: none">
+                        <label class="col-md-2 ">{{ forms_user_obj.password2.label }}</label>
+                        {{ forms_user_obj.password2 }}
+                        <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+                    </div>
+
+                </div>
 
             </div>
 
 
-            <div class="form-inline ">
-                <label class="col-md-2  col-form-label">狀態</label>
-                {{ forms_obj.is_staff }}
+            <div class="row">
+                <div class="form-group">
+                    <button id="submit" type="button" class="btn btn-primary center-block">新增</button>
+
+                </div>
 
             </div>
-
-
-            <div class="form-inline" style="padding-right: 15px; display: none">
-                <label class="col-md-2  col-form-label">密碼</label>
-
-                {{ forms_obj.password1 }}
-            </div>
-
-
-            <div class="form-inline" style="padding-right: 15px; ; display: none">
-                <label class="col-md-2  col-form-label">確認密碼</label>
-                {{ forms_obj.password2 }}
-            </div>
-
-            <button id="userform_submit" type="button" class="btn btn-primary center-block">新增</button>
-
-
         </form>
-
 
     </div>
 
 
 
 
-    <!--- 新增完成 表單-->
+    <!--- Modal -->
     <div class="modal fade" id="Modal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">新增成功</h4>
+                    <h4 class="modal-title"></h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
@@ -168,8 +191,8 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <a href="{% url 'user' %}" class="btn btn-primary"  role="button">返回列表</a>
-                    <a href="{% url 'user_add' %}" class="btn btn-success"  role="button">繼續新增</a>
+                    <a href="{% url 'user' %}" class="btn btn-primary" role="button">返回列表</a>
+                    <a href="{% url 'user_add' %}" class="btn btn-success" role="button">繼續新增</a>
                 </div>
 
             </div>
@@ -189,18 +212,15 @@
 {% block extra-js %}
 
     <script>
-        function BeforeFormSubmit(e) {
-            $(":disabled").removeAttr("disabled");
-        }
+        $(document).ready(function () {
 
+            $("#id_code").keyup(function (e) {
+                    code = this.value;
+                    $("#id_number").val(code.slice(code.length - 2));
+                }
+            );
 
-        $("input[name='birthday']").datepicker(
-            {
-                language: 'zh-TW',
-                format: "yyyy-mm-dd",
-                todayHighlight: true,
-
-            });
+        });
 
 
         // 選擇部門後請求該用戶編號
@@ -213,37 +233,33 @@
                 data: {'id': e.value},
 
                 success: function (callback) {
-                    //console.log(callback);
+                    console.log(callback);
 
                     if (callback.status == 'ok') {
-                        $("#userform_add [name='code']").val(callback.data);
-                        $("#userform_add [name='code']").removeAttr("disabled");
+                        code = callback.data;
+                        $("#form [name='code']").val(code);
+                        $("#form [name='code']").removeAttr("disabled");
+                        $("#id_number").val(code.slice(code.length - 2));
                     }
                     else {
                         console.log("請求錯誤");
-                        $("#userform_add [name='code']").val("");
-                        $("#userform_add [name='code']").attr("disabled", "disabled");
+                        $("#form [name='code']").val("");
+                        $("#form [name='code']").attr("disabled", "disabled");
                     }
 
 
                 },
                 error: function () {
                     console.log("請求錯誤");
-                    $("#userform_add [name='code']").val("");
-                    $("#userform_add [name='code']").attr("disabled", "disabled");
+                    $("#form [name='code']").val("");
+                    $("#form [name='code']").attr("disabled", "disabled");
                 }
             });
         };
 
 
-        // bind button
-        $("#userform_submit").on("click", function (e) {
-            $("#userform_add").submit();
-        });
-
-
-        // 提交 新增資產表單
-        $("#userform_add").on("submit", function (e) {
+        // 提交
+        $("#form").on("submit", function (e) {
 
             var postData = $(this).serializeArray();
             console.log(postData);
@@ -254,36 +270,35 @@
                 data: postData,
                 success: function (callback) {
                     console.log(callback);
+                    //$('#Modal').modal({backdrop: 'static', keyboard: false});
 
                     if (callback.status == 'ok') {
-                        $(".alert").show();
-                        $(".alert strong").text(callback.msg);
-                        $(".alert").addClass("alert-success").removeClass("alert-danger");
+                        console.log("ok");
+
                         $.each(callback.success_fields, function (i, val) {
 
-                            input_tag = $("#userform_add [name='" + val + "']");
+                            input_tag = $("[name='" + val + "']");
                             div_tag = input_tag.closest("div");
                             div_tag.removeClass("has-error").addClass("has-success");
                             div_tag.find("span").removeClass("glyphicon-remove").addClass("glyphicon-ok");
 
                         });
 
-                        $("#Modal").modal('show')
+                        //$("#Modal").modal('show')
 
 
                     } else {
-                        $(".alert").show();
-                        $(".alert").addClass("alert-danger");
-                        $(".alert strong").text(callback.msg);
+                        console.log("error");
+                        $(".modal-title").text(callback.msg);
+                        $(".modal-title").css({'color': 'red'});
 
-                        $("#userform_add .alert-danger strong").text(callback.msg);
 
-                        console.log(callback.errors_fields);
-                        console.log(callback.success_fields);
+                        //console.log(callback.errors_fields);
+                        //console.log(callback.success_fields);
 
                         $.each(callback.errors_fields, function (i, val) {
 
-                            input_tag = $("#userform_add [name='" + val + "']");
+                            input_tag = $("[name='" + val + "']");
                             div_tag = input_tag.closest("div");
                             div_tag.removeClass("has-success").addClass("has-error");
                             div_tag.find("span").removeClass("glyphicon-ok").addClass("glyphicon-remove");
@@ -293,41 +308,21 @@
 
                         $.each(callback.success_fields, function (i, val) {
 
-                            input_tag = $("#userform_add [name='" + val + "']");
+                            input_tag = $("[name='" + val + "']");
                             div_tag = input_tag.closest("div");
                             div_tag.removeClass("has-error").addClass("has-success");
                             div_tag.find("span").removeClass("glyphicon-remove").addClass("glyphicon-ok");
 
                         });
 
+
                     }
-
-                },
-                error: function () {
-                    $(".alert").show();
-                    $(".alert").addClass("alert-danger");
-                    $(".alert strong").text("輸入錯誤");
-
-
                 }
+
             });
-            e.preventDefault();
+
+
         });
-
-
-        function ch_passwd_ele(e) {
-
-            console.log(e.value);
-
-            if (e.value == "True") {
-                $("[name='password1']").closest(".form-inline").show();
-                $("[name='password2']").closest(".form-inline").show();
-            } else {
-                $("[name='password1']").closest(".form-inline").hide();
-                $("[name='password2']").closest(".form-inline").hide();
-            }
-
-        }
 
 
     </script>
